# pet-that-dog

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: SECURITY.md
.well-known/: security.txt
_oldreact/: package-lock.json  package.json
_oldreact/web/src/: index.html  main.tsx  styles.css
_oldreact/web/src/app/ui/: ui-layout.tsx
app/: .gitignore  package-lock.json  package.json  vercel.json
app/.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
app/.nx/workspace-data/d/: server-process.json
app/_scripts/: deploy-app-to-arweave.ts  upload-devnet-token-metadata.ts  upload-mainnet-token-metadata.ts
app/_token-mint-pages/: nft_metadata.ts
app/web/: project.json  tsconfig.json  webpack.config.js
app/web/app/: layout.tsx
app/web/components/dashboard/: dashboard-feature.tsx
app/web/public/: actions.json
app/web/public/.well-known/: security.txt
app/web/src/: index.html  main.tsx  styles.css
app/web/src/api/: bonk.ts  pet.ts
app/web/src/app/: SessionKeyButton.tsx  app-layout.tsx  app-routes.tsx  app.tsx  create-dog-page.tsx  dapp.tsx  modal.tsx  styles.css
app/web/src/app/cluster/: cluster-data-access.tsx
app/web/src/app/components/: HeroSwap.tsx  MarketInfo.tsx  TokenCounter.tsx  Trading.tsx
app/web/src/app/pages/: dog-creation.tsx  home.tsx  nft_image.ts  nft_mint.ts
app/web/src/app/session/: SessionProvider.tsx
app/web/src/app/solana/: solana-provider.tsx
app/web/src/routes/: action-routes.ts
app/web/src/utils/: _.ts  idl.ts  pet_dat_dog.json  pet_that_dog.json  token-metadata.ts  useProgram.ts
app/web/utils/: useProgram.ts
mock-up/app/: dapp.js  index.html  styles.css
mock-up/media/sprite sheets/: 1-sunriseIntro.json  2-sitUp.json  3-petDog.json  4-layDown.json  5-idleWind.json  BONK.json
pet-dat-dog/: README.md  package-lock.json  package.json
pet-dat-dog/web/components/dashboard/: dashboard-feature.tsx  index.tsx
pet-dat-dog/web/components/ui/: ui-layout.tsx
pet-dat-dog/web/public/: metadata.json
pet-dat-dog/web/src/app/: dogs.tsx
pet-dat-dog/web/src/app/dashboard/: dashboard-feature.tsx
pet-dat-dog/web/utils/: pet_dat_dog.json  useProgram.ts
product/: Deployment Sequence.txt  Maximilian_Trillion_token_metadata.json  Maximilian_token_metadata.json  Maximus_Rex_token_metadata.json  Petey_token_metadata.json  Token Idea Updates.txt  pet dat dog feature wish.txt  todo.txt  token_metadata.json  v0 Architecture.txt
product/Dog Tokens & Metadata/: Maximilian_I_token_metadata.json
product/other/: Anabelle.aseprite  dog4.aseprite
programs/pet-dat-dog/: Cargo.toml
programs/pet-dat-dog/src/: _lib.rs  context.rs  lib.rs  state.rs
programs/pet-dat-dog/src/contexts/: bonk.rs  dog.rs  mod.rs  pet.rs  user.rs
programs/pet-dat-dog/src/state/: board.rs  dog.rs  mod.rs  team.rs  user.rs
programs/pet-that-dog/: Cargo.toml
programs/pet-that-dog/src/: context.rs  lib.rs  state.rs
scripts/: upload-devnet-token-metadata.ts  upload-mainnet-token-metadata.ts
tests/: _escrow.ts  _run_pets.sh  bonk.ts  example.ts  global_max_mainnet.ts  init_mainnet.ts  marginfi-tokens.ts  multisig_init_Maximilian.ts  multisig_init_global.ts  multisig_init_max_mainnet.ts  p3.ts  pet-dat-dog.ts  pet-that-dog.ts  pet.ts  player2.ts  query.ts  query_program.ts
tests/multi sig base 58 scripts/: _multisig_init_Global.ts  multisig_init_max_mainnet.ts
tests/multi_sig_base_58_scripts/: multisig_init_max_mainnet.ts  transfer-all.ts
tests/spl launchpad/: spl_init.ts  spl_metadata.ts  spl_mint.ts
