[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program = "=1.14.0"
solana-frozen-abi = "=1.14.0"
solana-sdk = "=1.14.0"
solana-cli-output = "=1.14.0"
solana-client = "=1.14.0"
solana-logger = "=1.14.0"
solana-program-test = "=1.14.0"
solana-account-decoder = "=1.14.0"
solana-measure = "=1.14.0"
solana-metrics = "=1.14.0"
solana-transaction-status = "=1.14.0"
solana-address-lookup-table-program = "=1.14.0"

anchor-lang = { git = "https://github.com/mrgnlabs/anchor.git", rev = "fdcf299dc55ecf7cfa8c4d598aecb1363b99c02d" }
anchor-spl = { git = "https://github.com/mrgnlabs/anchor.git", features = ["metadata", "token_2022"], rev = "fdcf299dc55ecf7cfa8c4d598aecb1363b99c02d" }
marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2.git", features = ["cpi"] }

spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
spl-discriminator = "0.2.2"
spl-token-2022 = "3.0.2"

pyth-sdk-solana = "=0.10.1"
pyth-solana-receiver-sdk = "0.3.0"
switchboard-solana = "0.29.0"
switchboard-on-demand = "0.1.14"
borsh = "0.10.3"
