[package]
name = "pet-dat-dog"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pet_dat_dog"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata", "token"] }
mpl-token-metadata = "4.1.2"
session-keys = { version = "2.0.5", features = ["no-entrypoint"] }
solana-program = "=1.17.13"
